fix: Update input and password field styles for improved readability and consistency

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ textarea:-webkit-autofill:focus,
 select:-webkit-autofill,
 select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
-  -webkit-text-fill-color: #fff;
+  -webkit-text-fill-color: var(--color-color-text-main);
   -webkit-box-shadow: 0 0 0px 1000px transparent inset;
   transition: background-color 9999s ease-in-out 0s;
 }
